[package]
name = "decentrust"
version = "0.1.0"
authors = ["asmith@vrrb.io <asmith+rust@vrrb.io>"]
edition = "2021"
description = "A lightweight library crate to provide structs and methods to implement decentralized, trustless, P2P reputation tracking systems"
readme = "README.md"
homepage = "https://vrrb.io/decentrust.rs"
repository = "https://github.com/vrrb-io/decentrust"
license = "MIT"
license-file = "LICENSE"
keywords = ["p2p", "eigentrust", "reputation", "honestpeer", "p2p-networks"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siphasher = "0.3.10"
num-traits = "0.2"
ordered-float = "3.6.0"
buckets = { git = "https://github.com/vrrb-io/buckets", branch = "main" }
serde_json = "1.0.64"
serde = { version = "1.0.144", features = ["derive"] }
